# dcpu-16

./: Cargo.toml
src/: assembler.rs  dcpu.pest  disassemble.rs  lib.rs  mem_iterator.rs  opcodes.rs  parser.rs  result.rs  virtual_machine.rs
src/assembly/: assemble.rs  layout.rs  mod.rs
src/dcpu_assembler/: main.rs
src/emulator/: main.rs
src/hardware/: clock.rs  core.rs  mod.rs
test/: simple.asm
