[package]
name = "dcpu16"
version = "0.1.0"
authors = ["Gavin Massey <mdk@mystacktrace.org>"]

[dependencies]
clap = "0.8.4"
pest = "^1.0"
pest_derive = "^1.0"
time = "0.1.32"

[lib]
name="dcpu16"
path="src/lib.rs"

[[bin]]
name="dcpu_assembler"
path="src/dcpu_assembler/main.rs"

[[bin]]
name="emulator"
path="src/emulator/main.rs"
