[package]
name = "dcpu16"
version = "0.1.0"
authors = ["Gavin Massey <mdk@mystacktrace.org>"]

[dependencies]
clap = "0.8.4"
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true}
time = "0.1.32"
thiserror = "1.0"

[features]
default = ["parser", "assembler"]
assembler =  ["parser"]
parser = ["pest", "pest_derive"]
